Fixed error on the VaV page

--- a/src/pages/vyskum-a-vyvoj.astro
+++ b/src/pages/vyskum-a-vyvoj.astro
@@ -71,10 +71,7 @@ const contact = {
       <div class="home-section-divider"></div>
       <div class="vav-intro-text">
         <div class="vav-intro-copy">
-          <Content />
-          <p>
-            Zlepšujete svoje prdukty, produkty, procesy alebo služby?
-          </p>
+          {hero.text}
         </div>
       </div>
 
