--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -344,6 +344,7 @@ h2 {
 .home-section-divider--full {
   width: 100%;
   margin-bottom: 0;
+  height: 8px;
 }
 
 .home-section-lead {
@@ -370,9 +371,8 @@ h2 {
   display: grid;
   grid-template-columns: minmax(0, 220px) minmax(0, 1fr) auto;
   align-items: center;
-  column-gap: 45px;
-  padding-right: 35px;
   border-radius: var(--radius);
+  overflow: hidden;
 
   /* biele pozadie, mierna priehľadnosť */
   background-color: rgba(255, 255, 255, 0.5);
@@ -389,33 +389,37 @@ h2 {
   /* modré pozadie za dátumom – 10 % priehľadnosť */
   background-color: rgba(16, 68, 125, 0.1);
   border-radius: var(--radius);
-  padding: 35px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-self: stretch;
+  padding: 35px;
   font-size: 18px;
   color: var(--color-blue);
 }
 
 .home-seminar-date-place {
-    color: var(--color-red);
-}
-
-.home-seminar-date-place {
+  color: var(--color-red);
   margin-top: 4px;
 }
 
 .home-seminar-content h3 {
   font-size: 24px; /* názvy seminárov 24px */
-  margin: 0 0 4px;
   font-weight: 700;
+  padding: 25px 45px 25px 45px;
 }
 
 .home-seminar-arrow {
   align-self: center;
   font-size: 50px;
   opacity: 0.6;
+  padding: 0 35px 0 35px;
+  transition: transform 0.15s ease-out;
+}
+
+.home-seminar-card:hover .home-seminar-arrow {
+  transform: translateX(5px);
 }
 
 /* ----------------------- */
@@ -880,8 +884,17 @@ padding-bottom: var(--section-padding-y);
 
   .home-seminar-card {
     grid-template-columns: 1fr;
-    row-gap: 12px;
+    justify-items: center;
   }
+
+  .home-seminar-date {
+    justify-self: stretch;
+    width: 100%;
+  }
+
+  .home-seminar-content h3 {
+  padding: 25px 45px 0 45px;
+}
 
   .home-contact-card {
     grid-template-columns: 1fr;
