Responsive tuning of the contact card and text adjustments in the calculator

--- a/src/pages/vyskum-a-vyvoj.astro
+++ b/src/pages/vyskum-a-vyvoj.astro
@@ -112,12 +112,12 @@ const contact = {
           </button>
 
           <div class="vav-calc-field vav-calc-field--wide">
-            <label>Náklady výskumu a vývoja 2024</label>
+            <label>Náklady výskumu a vývoja za obdobie minulé</label>
             <div class="vav-calc-input">5 000 €</div>
           </div>
 
           <div class="vav-calc-field vav-calc-field--wide">
-            <label>Náklady výskumu a vývoja 2023</label>
+            <label>Náklady výskumu za obodobie predminulé</label>
             <div class="vav-calc-input">2 500 €</div>
           </div>
         </div>
@@ -125,7 +125,7 @@ const contact = {
         <div class="vav-calc-results">
           <div class="vav-calc-result-item">
             <div class="vav-calc-result-value">10&nbsp;000&nbsp;€</div>
-            <div class="vav-calc-result-label">superodpočet 100&nbsp;%</div>
+            <div class="vav-calc-result-label">superodpočet od základu dane</div>
           </div>
           <div class="vav-calc-result-item">
             <div class="vav-calc-result-value">787,5&nbsp;€</div>
