--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -657,36 +657,38 @@ padding-bottom: var(--section-padding-y);
 
 .vav-calc-field label {
   color: var(--color-blue);
-  border-radius: var(--radius);
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
   background-color: rgba(255, 255, 255, 0.4);
   font-size: 15px;
   font-weight: 700;
-  padding: 10px 0px 10px 15px;
+  padding: 10px 15px 10px 15px;
 
 }
 
 .vav-calc-input {
-  border-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
   padding: 8px 10px;
   font-size: 18px;
   font-weight: 700;
-  text-align: right;
+  text-align: left;
   color: var(--color-blue);
   background-color: #fff;
 }
 
 .vav-calc-plus-field {
-  margin-top: 22px;
-  border-radius: var(--radius);
-  border: 1px dashed rgba(178, 24, 50, 0.6);
-  background-color: rgba(178, 24, 50, 0.05);
-  cursor: default;
+  border-bottom-left-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
+  background-color: rgba(16, 68, 125, 0.1);
+  padding: 8px 10px;
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 26px;
   line-height: 1;
-  color: var(--color-red);
+  color: var(--color-blue);
 }
 
 .vav-calc-plus-field span {
@@ -722,6 +724,7 @@ padding-bottom: var(--section-padding-y);
 .vav-calc-result-value {
   font-size: 50px;
   font-weight: 700;
+  margin-right: auto;
 }
 
 .vav-calc-result-label {
