Patent box calculator and certain adjustments as agreed with the MGO

--- a/src/components/calculators/InvesticieCalculator.astro
+++ b/src/components/calculators/InvesticieCalculator.astro
@@ -236,7 +236,7 @@
             details.bandLabel +
             ". Použitá sadzba odpočtu: " +
             details.rate.toString() +
-            " % z daňového odpisu podľa § 30e zákona o dani z príjmov.";
+            " % z daňového odpisu podľa § 30e zákona o dani z príjmov. Výsledky sú orientačné a nenahrádzajú individuálne daňové poradenstvo.";
         } else {
           infoText =
             "Podmienky na uplatnenie odpočtu podľa § 30e ZDP nie sú splnené. " +
