--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -664,7 +664,7 @@ padding-bottom: var(--section-padding-y);
   background-color: rgba(255, 255, 255, 0.4);
   font-size: 15px;
   font-weight: 700;
-  padding: 10px 15px 10px 15px;
+  padding: 10px 15px;
   flex: 1 0 auto;
   display: flex;
   align-items: center; 
@@ -673,12 +673,16 @@ padding-bottom: var(--section-padding-y);
 .vav-calc-input {
   border-bottom-left-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
-  padding: 8px 10px;
+  padding: 8px 15px;
   font-size: 18px;
   font-weight: 700;
   text-align: left;
   color: var(--color-blue);
   background-color: #fff;
+}
+
+.vav-calc-input-space {
+  letter-spacing: 1.75px;
 }
 
 .vav-calc-plus-field {
